# metac-bot

./: README.md  fail.py  forecast_bot.py  main.py  pyproject.toml  simple-forecast-bot.py  template.py
.github/workflows/: aib_build.yaml  aib_run.yaml  bot-template.yaml  continuous_run.yaml  daily_run.yaml  daily_run_beta.yml  daily_run_simple_bot.yaml  pr_check.yaml  quarterly_cup.yaml  quarterly_cup_run.yaml
