[tool.poetry]
name = "metac-bot"
version = "0.1.0"
description = ""
authors = ["Vasile Popescu <elisescu@elisescu.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
python-decouple = "^3.8"
guidance = "^0.1.15"
openai = "^1.35.3"
jinja2 = "^3.1.4"
llama-index-llms-openai = "^0.2.13"
llama-index-llms-anthropic = "^0.3.6"
llama-index = "^0.11.17"
asknews = "^0.7.50"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
