[tool.poetry]
name = "metac-bot"
version = "0.1.0"
description = ""
authors = ["Vasile Popescu <elisescu@elisescu.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
python-decouple = "^3.8"
openai = "^1.35.3"
jinja2 = "^3.1.4"
asknews = "^0.9.1"
litellm = "^1.55.3"
typeguard = "^4.4.1"
pydantic = "^2.10.3"
forecasting-tools = "^0.2.10"
matplotlib = "^3.10.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
